# from-js-to-python

./: README.md  pyproject.toml
docs/: 01-basic-syntax.md  02-data-types.md  03-data-structures.md  04-operators.md  05-control-flow.md  06-functions.md  07-classes.md  08-modules.md  09-error-handling.md  10-async.md  11-comprehensions-generators.md  12-decorators.md  13-type-hints.md  14-tools-ecosystem.md  15-conventions-style.md  16-practical-tips.md  17-learning-resources.md  outline.md
notebooks/: 01-basic-syntax.ipynb  02-data-types.ipynb  03-data-structures.ipynb  04-operators.ipynb  05-control-flow.ipynb  06-functions.ipynb  07-classes.ipynb  08-modules.ipynb  09-error-handling.ipynb  10-async.ipynb  11-comprehensions-generators.ipynb  12-decorators.ipynb  13-type-hints.ipynb  14-tools-ecosystem.ipynb  15-conventions-style.ipynb  16-practical-tips.ipynb  17-learning-resources.ipynb
